--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,54 @@
-Flask
-flask-bootstrap
-pytz
-python-dateutil
-pandas
-plotly
-aiogram
-paho-mqtt
-sqlalchemy
+aiogram==2.25.1
+aiohttp==3.8.4
+aiosignal==1.3.1
+anyio==3.7.1
+async-timeout==4.0.2
+attrs==23.1.0
+Babel==2.9.1
+bcrypt==4.0.1
+blinker==1.6.2
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.2.0
+click==8.1.3
+contourpy==1.1.0
+cryptography==41.0.2
+cycler==0.11.0
+dominate==2.8.0
+Flask==2.3.2
+Flask-Bootstrap==3.3.7.1
+fonttools==4.40.0
+frozenlist==1.4.0
+h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.4
+magic-filter==1.0.9
+MarkupSafe==2.1.3
+matplotlib==3.7.2
+multidict==6.0.4
+numpy==1.25.1
+packaging==23.1
+paho-mqtt==1.6.1
+pandas==2.0.3
+paramiko==3.2.0
+Pillow==10.0.0
+plotly==5.15.0
+pycparser==2.21
+PyNaCl==1.5.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-telegram-bot==20.4
+pytz==2023.3
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.17
+tenacity==8.2.2
+typing_extensions==4.7.1
+tzdata==2023.3
+visitor==0.1.3
+Werkzeug==2.3.6
+yarl==1.9.2
